# homebrew-trmd

./: README.md  additional_prompt.txt  pyproject.toml  trmd.rb
src/trmd/: main.py
