[project]
name = "trmd"
version = "0.1.8"
description = "Translate Markdown using OpenAI"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Rio Fujita", email = "rifujita@microsoft.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=1.82.1",
]

[project.scripts]
trmd = "trmd.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/rioriost/homebrew-trmd"
Issues = "https://github.com/rioriost/homebrew-trmd/issues"
